[workspace]
resolver = "2"

members = [
    "access-control",
    "arena-sessions",
    "asset-escrow-v3",
    "bonus-rotator",
    "anti-cheat-bounties",
    "bounty-escrow",
    "campaign-claims",
    "creator-royalties",
    "creator-escrow",
    "creator-drops",
    "achievement-badge",
    "ai-generated-game",
    "badge-minter",
    "balance-management",
    "coin-flip",
    "color-prediction",
    "comprehensive-test-suite",
    "contract-address-registry",
    "contract-circuit-breaker",
    "contract-doc-generator",
    "contract-health-registry",
    "contract-interaction-library",
    "contract-metadata-registry",
    "contract-monitoring",
    "contract-role-registry",
    "contract-upgrade-timelock",
    "cross-chain-bridge",
    "cross-contract-call-guard",
    "cross-contract-handler",
    "daily-reward-emission",
    "daily-trivia",
    "deployment-scripts",
    "dice-roll",
    "dynamic-fee-policy",
    "duel-engine",
    "emergency-pause",
    "epoch-scheduler",
    "escrow-ledger",
    "escrow-marketplace",
    "escrow-vault",
    "mission-ledger",
    "vault-claims",
    "attendance-pass",
    "exploit-prevention",
    "fee-shield",
    "fanout-distributor",
    "fee-allocator",
    "identity-registry",
    "lending-pool",
    "fee-management",
    "gas-optimization-analysis",
    "governance",
    "governance-token",
    "guild-progress",
    "guild-season",
    "affiliate-ledger",
    "daily-challenges",
    "leaderboard",
    "prize-router-v2",
    "squad-roster",
    "matchmaking-queue",
    "multiplayer-room",
    "nft-reward",
    "number-guess",
    "oracle-integration",
    "pattern-puzzle",
    "penalty-slashing",
    "price-prediction",
    "prize-pool",
    "random-generator",
    "raffle-engine",
    "referral-rewards",
    "referral-system",
    "revenue-split",
    "reward-distribution",
    "reward-router",
    "reward-stream",
    "reward-unlocker",
    "reward-vesting",
    "season-pass",
    "season-rewards-vault",
    "session-nonce-manager",
    "settlement-queue",
    "shared",
    "speed-trivia",
    "jackpot-pool",
    "staking",
    "ticket-market",
    "staking-rewards",
    "streak-bonus",
    "streak-ladder",
    "loot-crate",
    "loot-rotation",
    "tournament-system",
    "tournament-lobby",
    "treasury",
    "treasury-allocation",
    "trivia-game",
    "upgrade-mechanism",
    "vip-subscription",
    "vote-escrow",
    "wordle-clone",
    "queue-rewards",
    "reserve-manager",
    "reserve-auction",
    "quest-redeemer",
    "squad-match",
    "sponsor-pool",
    "sponsorship-ledger",
    "treasury-safeguard",
    "ladder-seasons",
    "voucher-minter",
    "map-voting",
    "round-finalizer",
    "vault-routing",
    "bonus-vault",
    "combo-rewards",
    "prize-streamer",
    "mission-pass",
    "arena-ladder",
    "clan-seasons",
]

exclude = [
    "higher-lower",
    "challenge-ladder",
    "merch-redemption",
    "profile-perks",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1
