[package]
name = "stellarcade-asset-escrow-v3"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "25.1.1"

[dev-dependencies]
soroban-sdk = { version = "25.1.1", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
panic = "abort"
lto = true
